crates/willikins-journal/tests/snapshots/schema_generation__run_state_schema_generates.snap
---
source: crates/willikins-journal/tests/schema_generation.rs
assertion_line: 29
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "RunState",
  "description": "Whether a run is still going, or how it ended.",
  "oneOf": [
    {
      "description": "Started; no `RunFinished` seen yet (including a run whose process\ndied mid-way, which looks the same from the journal's own point of\nview -- it has no way to distinguish \"still running\" from \"will\nnever finish\").",
      "type": "string",
      "const": "running"
    },
    {
      "description": "Finished successfully, with no gate blocked.",
      "type": "string",
      "const": "succeeded"
    },
    {
      "description": "Finished with no tool failure, but at least one gate blocked (task\nG2, decision (j)): every node not downstream of it ran. See\n[`RunRecord::blocked`]/[`RunRecord::next_step`].",
      "type": "string",
      "const": "blocked"
    },
    {
      "description": "Finished with a failure.",
      "type": "string",
      "const": "failed"
    }
  ]
}
